tests/fixtures/invalid/list_notin_bool.py
# Cannot use 'not in' with List[int] and Bool
x: bool = [1, 2, 3] not in True
